Fix broken styles on members modal.

--- a/app/assets/stylesheets/arbor_reloaded/_project_members.scss
+++ b/app/assets/stylesheets/arbor_reloaded/_project_members.scss
@@ -59,9 +59,11 @@
     width: calc(100% - #{$avatar-dimension + $user-data-padding});
 
     p {
+      @include inline-block;
       font-size: rem-calc(12);
       line-height: 1.3;
       margin: 0;
+      width: 90%;
     }
 
     .user-mail {
@@ -81,6 +83,8 @@
       text-transform: uppercase;
       vertical-align: middle;
     }
+
+    .circles { margin-bottom: 0; }
   } // user data
 
   .show-project-data {
